use the perm interface wrapper
