# 3rd/swagger/cyrest.yaml
@@ -49,17 +49,7 @@ paths:
             title: forbidden
             type: object
       parameters:
-      - name: sort
-        type: string
-        description: ""
-        in: query
-        required: false
       - name: status
-        type: string
-        description: ""
-        in: query
-        required: false
-      - name: source
         type: string
         description: ""
         in: query
@@ -67,6 +57,16 @@ paths:
       - name: email
         type: 'string '
         description: ' search the email field'
+        in: query
+        required: false
+      - name: sort
+        type: string
+        description: ""
+        in: query
+        required: false
+      - name: source
+        type: string
+        description: ""
         in: query
         required: false
       - name: token
